<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    flOutSide-->
    <FrameLayout
        android:id="@+id/flOutSide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--        layoutMain-->
        <LinearLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:background="@drawable/bg_16_solid_white"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <!--            tvTitle-->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/create_package_name"
                android:textColor="#52525B"
                android:textSize="@dimen/sp_16" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_6_stroke_gray"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start|center_vertical"
                android:hint="@string/enter_your_package_name"
                android:maxLength="20"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_12"
                android:textColor="#52525B"
                android:textColorHint="#99868686"
                android:textSize="@dimen/sp_14" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_18"
                android:layout_marginBottom="@dimen/dp_23"
                android:orientation="horizontal">

                <!--                tvNo-->
                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_weight="1"
                    android:background="@drawable/bg_100_stroke_green_solid_white"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_8"
                    android:text="@string/no"
                    android:textColor="#34D399" />

                <!--                tvYes-->
                <TextView
                    android:id="@+id/tvYes"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_100_solid_green"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_8"
                    android:text="@string/yes"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</layout>