<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scvText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="22dp"
    android:clipChildren="false"
    android:paddingBottom="0dp"
    android:isScrollContainer="true"
    android:paddingTop="10dp"
    android:scrollbars="none"
    android:visibility="gone"
    android:background="@drawable/bg_bg"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="vertical">

        <!-- Title: Text with Done Button -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <!-- Title: Text -->
            <TextView
                android:id="@+id/tvTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_2_bold"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/text"
                android:textColor="#C13F74"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/baloo_2_bold"
                android:gravity="start"
                android:text="@string/text"
                android:textColor="@color/app"
                android:textSize="18sp" />
            <!--                    btnDoneText-->
            <ImageView
                android:id="@+id/btnDoneText"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginTop="-3dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_done_background" />
        </FrameLayout>




        <!--            edtText-->
        <EditText
            android:id="@+id/edtText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:fontFamily="@font/fredoka"
            android:hint="@string/hello_world_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="30"
            android:paddingHorizontal="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#80868686"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo_2_bold"
            android:gravity="start"
            android:text="@string/font"
            android:textColor="@color/app"
            android:textSize="18sp" />

        <!--            rcvFont-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvFont"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="10dp"
            android:clipChildren="false"
            android:clipToPadding="true"
            android:orientation="horizontal"
            android:paddingHorizontal="0.5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/titleFont"
            tools:listitem="@layout/item_font" />

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-16dp"
            android:fontFamily="@font/baloo_2_bold"
            android:gravity="start"
            android:text="@string/color_text"
            android:textColor="@color/app"
            android:textSize="18sp" />

        <!--            rcvTextColor-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvTextColor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/titleColor"
            tools:listitem="@layout/item_text_color" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

    </LinearLayout>
</ScrollView>
