<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:background="@drawable/bg_dialog_rate">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvAvtRate"
                android:layout_width="@dimen/dp_72"
                android:layout_height="@dimen/dp_72"
                android:layout_marginTop="@dimen/dp_28"
                android:src="@drawable/ic_rate_zero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/roboto_medium"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/zero_star_title"
                android:textColor="#38306B"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imvAvtRate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/zero_star"
                android:textColor="#99242424"
                android:textSize="@dimen/sp_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1" />

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:srb_clearRatingEnabled="false"
                app:srb_clickable="true"
                app:srb_drawableEmpty="@drawable/ic_rate_not"
                app:srb_drawableFilled="@drawable/ic_rate"
                app:srb_isIndicator="false"
                app:srb_minimumStars="0"
                app:srb_numStars="0"
                app:srb_rating="0"
                app:srb_scrollable="true"
                app:srb_starHeight="@dimen/dp_30"
                app:srb_starPadding="@dimen/dp_4"
                app:srb_starWidth="@dimen/dp_30"
                app:srb_stepSize="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_20"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnVote"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_20"
                    app:cardCornerRadius="@dimen/dp_30"
                    app:cardBackgroundColor="#38306B"
                    app:cardElevation="@dimen/dp_0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/rate"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_15"
                    android:text="@string/exit"
                    android:layout_marginTop="@dimen/dp_0"
                    android:textAllCaps="false"
                    android:textColor="@color/figma_primary"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
